[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
futures-util = { version = "0.3", features = [] }
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] } 
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.18", features = ["cargo"] }
rand = { version = "0.8.5", features = [] }

